# twomice-auth

./: Cargo.toml  Dockerfile  README.md
.cargo/: config.toml
.github/workflows/: docker.yml
migrations/: 001_auth_funcs.down.sql  001_auth_funcs.up.sql
src/: errors.rs  main.rs  password_utils.rs  service.rs
src/routes/: account.rs  common.rs  login.rs  logout.rs  mod.rs  sign_in.rs  signup.rs  validate.rs
src/utils/: errors.rs
