[package]
name = "auth"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.0"
axum = "0.7"
chrono = { version = "0.4.42", features = ["serde"] }
config = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
custom_headers = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
easy_errors = { git = "https://github.com/MouseBurrow/twomice-libs.git", branch = "main" }
hex = "0.4"
http = "1"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.9.0-alpha.1", features = ["postgres", "runtime-tokio", "macros", "uuid", "chrono", "migrate", "tls-rustls"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
uuid = { version = "1.18.1", features = ["serde"] }
